remove unsafe related helpers functions